[package]
name = "elf-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
goblin = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
sha1 = "0.10"
hex = "0.4"
anyhow = "1.0.75"
rayon = "1.10.0"
ring = "0.17.14"